create new feature: list, update and delete education
